@@ -16,86 +16,85 @@
  */
 package org.apache.solr.handler;
 
-import org.apache.solr.common.SolrException;
+import org.apache.commons.io.FileUtils;
+import org.apache.lucene.store.Lock;
+import org.apache.lucene.store.SimpleFSLockFactory;
 import org.apache.solr.core.SolrCore;
+import org.apache.solr.common.util.NamedList;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.text.SimpleDateFormat;
 import java.util.Collection;
 import java.util.Date;
-import java.util.WeakHashMap;
+import java.util.ArrayList;
 
 /**
- * <p/>
- * Provides functionality equivalent to the snapshooter script
- * </p>
+ * <p/> Provides functionality equivalent to the snapshooter script </p>
  *
  * @version $Id$
  * @since solr 1.4
  */
 public class SnapShooter {
+  private static final Logger LOG = LoggerFactory.getLogger(SnapShooter.class.getName());
   private String snapDir = null;
   private SolrCore solrCore;
+  private SimpleFSLockFactory lockFactory;
 
-  public SnapShooter(SolrCore core) {
+  public SnapShooter(SolrCore core) throws IOException {
     solrCore = core;
     snapDir = core.getDataDir();
+    lockFactory = new SimpleFSLockFactory(snapDir);
   }
 
-  void createSnapAsync(final Collection<String> files) {
+  void createSnapAsync(final Collection<String> files, final ReplicationHandler replicationHandler) {
     new Thread() {
       public void run() {
-        createSnapshot(files);
+        createSnapshot(files, replicationHandler);
       }
     }.start();
   }
 
-  void createSnapshot(Collection<String> files) {
-    File lockFile = null;
+  void createSnapshot(Collection<String> files, ReplicationHandler replicationHandler) {
+    NamedList details = new NamedList();
+    details.add("startTime", new Date().toString());
     File snapShotDir = null;
     String directoryName = null;
+    Lock lock = null;
     try {
-      lockFile = new File(snapDir, directoryName + ".lock");
-      if (lockFile.exists()) {
-        return;
-      }
       SimpleDateFormat fmt = new SimpleDateFormat(DATE_FMT);
       directoryName = "snapshot." + fmt.format(new Date());
+      lock = lockFactory.makeLock(directoryName + ".lock");
+      if (lock.isLocked()) return;
       snapShotDir = new File(snapDir, directoryName);
-      lockFile.createNewFile();
-      snapShotDir.mkdir();
-      for (String indexFile : files) {
-        copyFile2Dir(new File(solrCore.getIndexDir(), indexFile), snapShotDir);
+      if (!snapShotDir.mkdir()) {
+        LOG.warn("Unable to create snapshot directory: " + snapShotDir.getAbsolutePath());
+        return;
       }
+      for (String indexFile : files) {
+        FileUtils.copyFileToDirectory(new File(solrCore.getIndexDir(), indexFile), snapShotDir, true);
+      }
+      details.add("fileCount", files.size());
+      details.add("status", "success");
+      details.add("snapshotCompletedAt", new Date().toString());
     } catch (Exception e) {
       SnapPuller.delTree(snapShotDir);
-      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, e);
+      LOG.error("Exception while creating snapshot", e);
+      details.add("snapShootException", e.getMessage());
     } finally {
-      if (lockFile != null) {
-        lockFile.delete();
+      replicationHandler.snapShootDetails = details;
+      if (lock != null) {
+        try {
+          lock.release();
+        } catch (IOException e) {
+          LOG.error("Unable to release snapshoot lock: " + directoryName + ".lock");
+        }
       }
-    }
-  }
-
-  static void copyFile2Dir(File file, File toDir) throws IOException {
-    FileInputStream fis = null;
-    FileOutputStream fos = null;
-    try {
-      fis = new FileInputStream(file);
-      File destFile = new File(toDir, file.getName());
-      fos = new FileOutputStream(destFile);
-      fis.getChannel().transferTo(0, fis.available(), fos.getChannel());
-      destFile.setLastModified(file.lastModified());
-    } finally {
-      ReplicationHandler.closeNoExp(fis);
-      ReplicationHandler.closeNoExp(fos);
     }
   }
 
   public static final String SNAP_DIR = "snapDir";
   public static final String DATE_FMT = "yyyyMMddhhmmss";
-  private static WeakHashMap<SolrCore, SnapShooter> SNAP_DIRS = new WeakHashMap<SolrCore, SnapShooter>();
 }
